--- a/index.html
+++ b/index.html
@@ -5,37 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="design.css">
     <title>Portfolio Website</title>
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Alex</a>
+        <a href="#" class="logo">Adeptus Astartes</a>
 
         <nav>
-            <a href="#" class="active"> Home</a>
-            <a href="#" >Services</a>
-            <a href="#" >Skills</a>
-            <a href="#" >Education</a>
-            <a href="#" >Experience</a>
-            <a href="#" >Contact</a>
+            <a href="#" class="active"> Ultra Marines</a>
+            <a href="#" >Dark Angels</a>
+            <a href="#" >Blood Angels</a>
+            <a href="#" >Space Wolves</a>
+            <a href="#" >Salamanders</a>
+            <a href="#" >Black Templars</a>
         </nav>
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="main.jpg" alt="">
+            <img src="a45d7dbf-092b-4ba0-80c0-b3f75e1e1a56.png" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi, It's <span>Alex</span></h1>
-            <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+            <h1>The <span>Emperor</span></h1>
+            <h1>Wants Your <span>Service</span></h1>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Hire me</a>
+            <a href="#" class="btn">APPLY NOW!</a>
         </div>
     </section>
 </body>
