--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="design.css">
-    <title>Portfolio Website</title>
+    <title>Recuitment Ad</title>
 </head>
 <body>
     <header>
         <a href="#" class="logo">Adeptus Astartes</a>
+        
 
         <nav>
             <a href="#" class="active"> Ultra Marines</a>
@@ -28,6 +29,9 @@
         <div class="home-content">
             <h1>The <span>Emperor</span></h1>
             <h1>Wants Your <span>Service</span></h1>
+            <p>"Courage and Honor!</p>
+            <p>"For the Imperium!</p>
+            <p>"For the Master of Mankind"</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
